# overleaf-git-sync

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  SKILL.md  TODO.md  pyproject.toml
src/ol_ce_sync/: __init__.py  auth.py  cli.py  config.py  diff.py  errors.py  git_ops.py  lock.py  snapshot.py  sync_engine.py
src/ol_ce_sync/backends/: __init__.py  base.py  http_backend.py  pyoverleaf_backend.py
src/ol_ce_sync/utils/: logging.py  paths.py  text.py
tests/: conftest.py  test_auth.py  test_cli.py  test_git_ops_and_diff.py  test_http_backend.py  test_snapshot.py  test_sync_engine.py
