[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overleaf-ce-agent-sync"
version = "0.1.0"
description = "Agent-safe Git-style synchronization for self-hosted Overleaf Community Edition."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "overleaf-ce-agent-sync contributors" }]
dependencies = [
  "requests>=2.31",
  "websocket-client>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
ol = "ol_ce_sync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ol_ce_sync"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
